<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/label_UTV"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:text="@string/update_label"/>

    <TextView
        android:id="@+id/first_UTV"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_UTV"
        android:text="@string/first_name"/>

    <EditText
        android:id="@+id/first_UET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/first_UTV"
        android:layout_marginLeft="50dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/first_UTV"
        android:orientation="horizontal"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/last_UTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_UTV"
        android:layout_marginTop="50dp"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/last_UET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/last_UTV"
        android:layout_alignLeft="@+id/first_UET"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/last_UTV"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/email_UTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_UTV"
        android:layout_marginTop="50dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_UET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_UTV"
        android:layout_alignLeft="@+id/last_UET"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/email_UTV"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/phone_UTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_UTV"
        android:layout_marginTop="50dp"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/phone_UET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phone_UTV"
        android:layout_alignLeft="@+id/email_UET"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/phone_UTV"
        android:inputType="phone" />

    <Button
        android:id="@+id/update_UB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_UTV"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        android:onClick="update"
        android:text="@string/update" />

    <Button
        android:id="@+id/delete_UB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_UTV"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:onClick="delete"
        android:layout_centerHorizontal="true"
        android:text="@string/delete" />

    <Button
        android:id="@+id/back_UB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_UTV"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/update_UB"
        android:layout_alignBottom="@+id/update_UB"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:onClick="goBack"
        android:text="@string/back" />

</RelativeLayout>